--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -7,16 +7,16 @@
 \usepackage{acronym}
 
 \school{\unibo}
-\programme{Corso di Laurea [Magistrale?] in Ingegneria e Scienze Informatiche}
+\programme{Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche}
 \title{Fancy Title}
-\author{Candidate Name}
+\author{Francesco Magnani}
 \date{\today}
-\subject{Supervisor's course name}
-\supervisor{Prof. Supervisor Here}
-\cosupervisor{Dott. CoSupervisor 1}
-\morecosupervisor{Dott. CoSupervisor 2}
-\session{I}
-\academicyear{2022-2023}
+\subject{Software Process Engineering}
+\supervisor{Danilo Pianini}
+\cosupervisor{Nicolas Farabegoli}
+\morecosupervisor{Angela Cortecchia}
+\session{III}
+\academicyear{2023-2024}
 
 % Definition of acronyms
 \acrodef{IoT}{Internet of Thing}
