feat: continued page 2 and 3 of introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,3 +76,56 @@
   biburl       = {https://dblp.org/rec/books/daglib/0015650.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/queue/Thomson21,
+  author       = {Patrick Thomson},
+  title        = {Static Analysis: An Introduction: The fundamental challenge of software
+                  engineering is one of complexity},
+  journal      = {{ACM} Queue},
+  volume       = {19},
+  number       = {4},
+  pages        = {29--41},
+  year         = {2021},
+  url          = {https://doi.org/10.1145/3487019.3487021},
+  doi          = {10.1145/3487019.3487021},
+  timestamp    = {Tue, 09 Nov 2021 15:12:45 +0100},
+  biburl       = {https://dblp.org/rec/journals/queue/Thomson21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/eurosys/PadioleauLHM08,
+  author       = {Yoann Padioleau and
+                  Julia Lawall and
+                  Ren{\'{e}} Rydhof Hansen and
+                  Gilles Muller},
+  editor       = {Joseph S. Sventek and
+                  Steven Hand},
+  title        = {Documenting and automating collateral evolutions in linux device drivers},
+  booktitle    = {Proceedings of the 2008 EuroSys Conference, Glasgow, Scotland, UK,
+                  April 1-4, 2008},
+  pages        = {247--260},
+  publisher    = {{ACM}},
+  year         = {2008},
+  url          = {https://doi.org/10.1145/1352592.1352618},
+  doi          = {10.1145/1352592.1352618},
+  timestamp    = {Tue, 20 Dec 2022 17:33:10 +0100},
+  biburl       = {https://dblp.org/rec/conf/eurosys/PadioleauLHM08.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/usenix/LawallM18,
+  author       = {Julia Lawall and
+                  Gilles Muller},
+  editor       = {Haryadi S. Gunawi and
+                  Benjamin C. Reed},
+  title        = {Coccinelle: 10 Years of Automated Evolution in the Linux Kernel},
+  booktitle    = {Proceedings of the 2018 {USENIX} Annual Technical Conference, {USENIX}
+                  {ATC} 2018, Boston, MA, USA, July 11-13, 2018},
+  pages        = {601--614},
+  publisher    = {{USENIX} Association},
+  year         = {2018},
+  url          = {https://www.usenix.org/conference/atc18/presentation/lawall},
+  timestamp    = {Tue, 16 Jul 2024 09:12:32 +0200},
+  biburl       = {https://dblp.org/rec/conf/usenix/LawallM18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
