feat: added Kotlin compiler plugin section in the introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -129,3 +129,10 @@
   biburl       = {https://dblp.org/rec/conf/usenix/LawallM18.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{JetBrains:KotlinCompilerPlugin,
+  author = {JetBrains},
+  title = {Writing Your First Kotlin Compiler Plugin},
+  howpublished = {\url{https://resources.jetbrains.com/storage/products/kotlinconf2018/slides/5_Writing%20Your%20First%20Kotlin%20Compiler%20Plugin.pdf}},
+  note = {Accessed: 2025-01-24}
+}
