feat: started working on chapter 2

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -136,3 +136,132 @@
   howpublished = {\url{https://resources.jetbrains.com/storage/products/kotlinconf2018/slides/5_Writing%20Your%20First%20Kotlin%20Compiler%20Plugin.pdf}},
   note = {Accessed: 2025-01-24}
 }
+
+@article{Beal2015,
+  title = {Aggregate Programming for the Internet of Things},
+  volume = {48},
+  ISSN = {0018-9162},
+  url = {http://dx.doi.org/10.1109/MC.2015.261},
+  DOI = {10.1109/mc.2015.261},
+  number = {9},
+  journal = {Computer},
+  publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+  author = {Beal,  Jacob and Pianini,  Danilo and Viroli,  Mirko},
+  year = {2015},
+  month = sep,
+  pages = {22–30}
+}
+
+@inproceedings{Beal2014TowardsAU,
+  title={Towards a Unified Model of Spatial Computing},
+  author={Jacob Beal and Ferruccio Damiani},
+  year={2014},
+  url={https://api.semanticscholar.org/CorpusID:204792591}
+}
+
+@article{DBLP:journals/jlap/ViroliBDACP19,
+  author       = {Mirko Viroli and
+                  Jacob Beal and
+                  Ferruccio Damiani and
+                  Giorgio Audrito and
+                  Roberto Casadei and
+                  Danilo Pianini},
+  title        = {From distributed coordination to field calculus and aggregate computing},
+  journal      = {J. Log. Algebraic Methods Program.},
+  volume       = {109},
+  year         = {2019},
+  url          = {https://doi.org/10.1016/j.jlamp.2019.100486},
+  doi          = {10.1016/J.JLAMP.2019.100486},
+  timestamp    = {Sun, 04 Aug 2024 19:52:19 +0200},
+  biburl       = {https://dblp.org/rec/journals/jlap/ViroliBDACP19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Viroli2018,
+  title = {Engineering Resilient Collective Adaptive Systems by Self-Stabilisation},
+  volume = {28},
+  ISSN = {1558-1195},
+  url = {http://dx.doi.org/10.1145/3177774},
+  DOI = {10.1145/3177774},
+  number = {2},
+  journal = {ACM Transactions on Modeling and Computer Simulation},
+  publisher = {Association for Computing Machinery (ACM)},
+  author = {Viroli,  Mirko and Audrito,  Giorgio and Beal,  Jacob and Damiani,  Ferruccio and Pianini,  Danilo},
+  year = {2018},
+  month = mar,
+  pages = {1–28}
+}
+
+@inproceedings{DBLP:conf/saso/PianiniBV17,
+  author       = {Danilo Pianini and
+                  Jacob Beal and
+                  Mirko Viroli},
+  title        = {Practical Aggregate Programming with Protelis},
+  booktitle    = {2nd {IEEE} International Workshops on Foundations and Applications
+                  of Self* Systems, FAS*W@SASO/ICCAC 2017, Tucson, AZ, USA, September
+                  18-22, 2017},
+  pages        = {391--392},
+  publisher    = {{IEEE} Computer Society},
+  year         = {2017},
+  url          = {https://doi.ieeecomputersociety.org/10.1109/FAS-W.2017.186},
+  doi          = {10.1109/FAS-W.2017.186},
+  timestamp    = {Sun, 04 Aug 2024 19:42:56 +0200},
+  biburl       = {https://dblp.org/rec/conf/saso/PianiniBV17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/ecoop/CasadeiV16,
+  author       = {Roberto Casadei and
+                  Mirko Viroli},
+  title        = {Towards Aggregate Programming in Scala},
+  booktitle    = {First Workshop on Programming Models and Languages for Distributed
+                  Computing, PMLDC@ECOOP 2016, Rome, Italy, July 17, 2016},
+  pages        = {5},
+  publisher    = {{ACM}},
+  year         = {2016},
+  url          = {https://doi.org/10.1145/2957319.2957372},
+  doi          = {10.1145/2957319.2957372},
+  timestamp    = {Tue, 06 Nov 2018 16:59:31 +0100},
+  biburl       = {https://dblp.org/rec/conf/ecoop/CasadeiV16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jss/AudritoCDSV24,
+  author       = {Giorgio Audrito and
+                  Roberto Casadei and
+                  Ferruccio Damiani and
+                  Guido Salvaneschi and
+                  Mirko Viroli},
+  title        = {The eXchange Calculus {(XC):} {A} functional programming language
+                  design for distributed collective systems},
+  journal      = {J. Syst. Softw.},
+  volume       = {210},
+  pages        = {111976},
+  year         = {2024},
+  url          = {https://doi.org/10.1016/j.jss.2024.111976},
+  doi          = {10.1016/J.JSS.2024.111976},
+  timestamp    = {Sun, 19 Jan 2025 14:04:08 +0100},
+  biburl       = {https://dblp.org/rec/journals/jss/AudritoCDSV24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/saso/AudritoDVC16,
+  author       = {Giorgio Audrito and
+                  Ferruccio Damiani and
+                  Mirko Viroli and
+                  Roberto Casadei},
+  editor       = {Sameh Elnikety and
+                  Peter R. Lewis and
+                  Christian M{\"{u}}ller{-}Schloer},
+  title        = {Run-Time Management of Computation Domains in Field Calculus},
+  booktitle    = {2016 {IEEE} 1st International Workshops on Foundations and Applications
+                  of Self* Systems (FAS*W), Augsburg, Germany, September 12-16, 2016},
+  pages        = {192--197},
+  publisher    = {{IEEE}},
+  year         = {2016},
+  url          = {https://doi.org/10.1109/FAS-W.2016.50},
+  doi          = {10.1109/FAS-W.2016.50},
+  timestamp    = {Fri, 24 Mar 2023 00:01:55 +0100},
+  biburl       = {https://dblp.org/rec/conf/saso/AudritoDVC16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
