--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -8,7 +8,7 @@
 
 \school{\unibo}
 \programme{Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche}
-\title{Fancy Title}
+\title{Development Process of a Compiler Plugin for Aggregate Computing}
 \author{Francesco Magnani}
 \date{\today}
 \subject{Software Process Engineering}
@@ -243,18 +243,6 @@ testing framework named \emph{Subjekt}, developed specifically for this purpose.
 Lastly, \cref{chap:conclusion} summarizes the primary contributions of this
 thesis and outlines potential directions for future work, building on the
 results and insights gained throughout this research.
-
-% TO REMOVE
-%----------------------------------------------------------------------------------------
-%Write your intro here.
-%\sidenote{Add sidenotes in this way. They are named after the author of the thesis}
-
-%For instance,
-%that you are discussing \acp{vm},
-%you may need both \ac{vm} and \acp{vm}.
-
-%\note{At the end, describe the structure of the paper}
-
 
 %----------------------------------------------------------------------------------------
 \chapter{Background: the Collektive case}
